--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ android {
 
 dependencies {
 
+   // implementation("io.coil-kt:coil-compose:2.6.0")
+
     def nav_version = "2.7.7"
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
