--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
 dependencies {
 
-   // implementation("io.coil-kt:coil-compose:2.6.0")
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
 
     def nav_version = "2.7.7"
 
